--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 		<link rel="stylesheet" href="estilo.css">		
 	</head>
 	<body>
-		<header>Lorem ipsum dolor sit amet
-		</header>
+		<header>Lorem ipsum dolor sit amet</header>
 			<nav>
 				<ul>
 					<li><a href="#">Inicio</a></li>
